# embedded-linux-telemetry-deamon

./: .gitignore  CMakeLists.txt  README.md
config/: config_example.json
include/: app_config.h  health_payload.h  logger.h  mqtt_client.h  sensor.h  sensor_factory.h  simulated_sensor.h  status_payload.h  telemetry_payload.h  topic_builder.h  version.h
mqtt/config/: docker-compose.yml
src/: main.cpp  mqtt_client.cpp  sensor_factory.cpp  simulated_sensor.cpp
systemd/: telemetry-daemon.service
